# create-drogon-app

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json
docs/: CODEBASE.md
src/: cli.js
src/commands/: create.js  list.js
src/lib/: copy.js  fs.js
src/templates/: discover.js
src/ui/: landing.js
templates/drogon-jwt-postgres/: CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.prod.yml  docker-compose.yml  template.json
templates/drogon-jwt-postgres-s3/: .env  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.prod.yml  docker-compose.yml  template.json
templates/drogon-jwt-postgres-s3/config/: config.example.json  config.json
templates/drogon-jwt-postgres-s3/src/config/: aws_config.h  database.h
templates/drogon-jwt-postgres-s3/src/filters/: AuthFilter.h
templates/drogon-jwt-postgres-s3/src/models/: Users.cc  Users.h  model.json
templates/drogon-jwt-postgres-s3/src/repositories/: UserRepository.cc
templates/drogon-jwt-postgres-s3/src/services/: S3Service.cc
templates/drogon-jwt-postgres-s3/src/utils/: AppError.hpp
templates/drogon-jwt-postgres/config/: config.example.json  config.json
templates/drogon-jwt-postgres/src/: main.cc
templates/drogon-jwt-postgres/src/filters/: AuthFilter.cc
templates/drogon-jwt-postgres/src/models/: Users.cc  Users.h  model.json
templates/drogon-jwt-postgres/src/repositories/: UserRepository.cc
templates/drogon-jwt-postgres/src/utils/: dotenv.hpp  token.cc  token.hpp
templates/drogon-postgres-s3/: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.prod.yml  docker-compose.yml  template.json
templates/drogon-postgres-s3/config/: config.json
templates/drogon-postgres-s3/src/: main.cc
templates/drogon-postgres-s3/src/controllers/: health.cc
templates/drogon-postgres-s3/src/models/: Users.cc  Users.h  model.json
templates/drogon-postgres-s3/src/repositories/: UserRepository.cc  UserRepository.h
templates/drogon-postgres-s3/src/services/: S3Service.h
templates/drogon-postgres-s3/src/utils/: response.hpp
templates/drogon-starter/: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yaml  template.json
templates/drogon-starter/config/: config.example.json  config.json
templates/drogon-starter/sql/: create_user.sql
templates/drogon-starter/src/: main.cc
templates/drogon-starter/src/controllers/: health.cc  health.h
templates/drogon-starter/src/database/: database.cc
templates/drogon-starter/src/models/: Users.cc  Users.h  model.example.json  model.json
templates/drogon-starter/src/repositories/: UserRepository.cc
